--- a/index.html
+++ b/index.html
@@ -4,9 +4,55 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  
+  <link rel="stylesheet" href="/styles/style.css">
+  <link rel="stylesheet" href="/styles/query.css">
+
   <title>Capoeira Vem Camará</title>
 </head>
 <body>
-  
+  <!-- Header/Nav -->
+  <header>
+    <div class="logo"></div>
+    <nav>
+      <ul class="nav-list">
+        <li><a href="#mestre-espiga" class="nav-link">Mestre Espiga</a>
+        </li>
+        <li><a href="#turmas" class="nav-link">Turmas</a></li>
+        <li><a href="#local" class="nav-link">Localização</a></li>
+        <li><a href="#contato" class="nav-link">Contato</a></li>
+        <li>
+          <a
+            href="https://www.instagram.com/capoeiravemcamara/"
+            target="_blank"
+          >
+          <ion-icon name="logo-instagram"></ion-icon></a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- CARROSEL -->
+  <section class="carrosel"></section>
+
+  <!-- Mestre Espiga -->
+  <section class="mestre-espiga" id="mestre-espiga"></section>
+
+  <!-- Turmas -->
+  <section class="turmas" id="turmas"></section>
+
+  <!-- Local -->
+  <section class="local" id="local"></section>
+
+  <!-- Contato -->
+  <section class="contato" id="contato"></section>
+
+  <!-- Footer -->
+  <footer></footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
