--- a/index.html
+++ b/index.html
@@ -61,39 +61,49 @@
 
   <!-- Turmas -->
   <section class="turmas" id="turmas">
+    <h2 class="heading-secondary">Turmas e Horários</h2>
     <div class="turmas-div grid grid--3-cols">
       <div class="card">
         <h3 class="heading-tertiary">Turma Mirim</h3>
         <img src="img/turma-mirim.jpg" alt="">
         <ul>
           <li><h4>Idade:</h4><p>3 a 8 anos</p></li>
-          <li><h4>Dias:</h4><p>Terças e Quintas</p></li>
-          <li><h4>Horários:</h4><p>17h30 a 18h30</p></li>
+          <li><h4>Dias:</h4><p>Terça e Quinta</p></li>
+          <li><h4>Horários:</h4><p>18h30 a 19h30</p></li>
         </ul>
       </div>
       <div class="card">   
         <h3 class="heading-tertiary">Turma Infantil</h3>
         <img src="img/turma-infantil.jpg" alt="">     
         <ul>
-          <li><h4>Idade:</h4><p>3 a 8 anos</p></li>
-          <li><h4>Dias:</h4><p>Terças e Quintas</p></li>
-          <li><h4>Horários:</h4><p>17h30 a 18h30</p></li>
+          <li><h4>Idade:</h4><p>9 a 13 anos</p></li>
+          <li><h4>Dias:</h4><p>Segunda, Quarta e Sexta</p></li>
+          <li><h4>Horários:</h4><p>18h30 a 19h30</p></li>
         </ul>
       </div>
       <div class="card">
         <h3 class="heading-tertiary">Turma Adulto</h3>
         <img src="img/turma-adulto.jpg" alt="">
         <ul>
-          <li><h4>Idade:</h4><p>3 a 8 anos</p></li>
-          <li><h4>Dias:</h4><p>Terças e Quintas</p></li>
-          <li><h4>Horários:</h4><p>17h30 a 18h30</p></li>
+          <li><h4>Idade:</h4><p>14 anos +</p></li>
+          <li><h4>Dias:</h4><p>Segunda a Sexta</p></li>
+          <li><h4>Horários:</h4><p>20h a 21h30</p></li>
         </ul>
       </div>
     </div>
   </section>
 
   <!-- Local -->
-  <section class="local" id="local"></section>
+  <section class="local" id="local">
+    <h2 class="heading-secondary">Localização</h2>
+    <div class="local-div grid grid--2-cols">
+      <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4765.016715172605!2d-43.339414281030166!3d-22.93805009841534!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bd8257a61db81%3A0x732037bf8a65a974!2sCapoeira%20Vem%20Camar%C3%A1!5e0!3m2!1spt-BR!2sbr!4v1676028106542!5m2!1spt-BR!2sbr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <div class="endereço">
+        <h3 class="heading-tertiary">Rua Comandante Rubens Silva, 253</h3>
+        <h4 class="heading-quaternary">Freguesia, Rio de Janeiro, RJ</h4>
+      </div>
+    </div>
+  </section>
 
   <!-- Contato -->
   <section class="contato" id="contato"></section>
