--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <!-- Local -->
   <section class="local" id="local">
     <h2 class="heading-secondary">Localização</h2>
-    <div class="local-div grid grid--2-cols">
+    <div class="local-div grid">
       <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4765.016715172605!2d-43.339414281030166!3d-22.93805009841534!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bd8257a61db81%3A0x732037bf8a65a974!2sCapoeira%20Vem%20Camar%C3%A1!5e0!3m2!1spt-BR!2sbr!4v1676028106542!5m2!1spt-BR!2sbr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       <div class="endereço">
         <h3 class="heading-tertiary">Rua Comandante Rubens Silva, 253</h3>
