--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             href="https://www.instagram.com/capoeiravemcamara/"
             target="_blank"
           >
-          <ion-icon name="logo-instagram" class="instagram-logo"></ion-icon></a>
+          <ion-icon name="logo-instagram" class="instagram-nav"></ion-icon></a>
         </li>
       </ul>
     </nav>
@@ -105,11 +105,33 @@
     </div>
   </section>
 
-  <!-- Contato -->
-  <section class="contato" id="contato"></section>
-
   <!-- Footer -->
-  <footer></footer>
+  <footer id="contato">
+    <div class="footer-div grid grid--2-cols">
+      <div class="contato">
+        <a 
+          href="https://wa.me/5521964933158?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20informa%C3%A7%C3%B5es%20sobre%20aulas%20de%20capoeira." 
+          target="_blank">
+          <ion-icon name="logo-whatsapp"></ion-icon>
+          <p>(21) 96493-3158</p>
+        </a>
+        <a 
+          href="https://mail.google.com/mail/?view=cm&fs=1&to=espigarj@gmai.com" target="_blank">
+          <ion-icon name="mail-outline"></ion-icon>
+          <p>espigarj@gmai.com</p>
+        </a>
+      </div>
+      <div class="social">
+        <a href="https://www.instagram.com/capoeiravemcamara/" target="_blank">
+          <ion-icon name="logo-instagram" class="instagram-logo"></ion-icon><p>@capoeiravemcamara</p></a>
+        
+        <a href="https://www.facebook.com/capoeirarj" target="_blank">
+          <ion-icon name="logo-facebook" class="facebook-logo"></ion-icon>
+          <p>/capoeirarj</p>
+        </a>
+      </div>
+    </div>
+  </footer>
 
   <script src="script.js"></script>
 </body>
