--- a/index.html
+++ b/index.html
@@ -32,18 +32,37 @@
         <li>
           <a
             href="https://www.instagram.com/capoeiravemcamara/"
-            target="_blank"
-          >
-          <ion-icon name="logo-instagram" class="instagram-nav"></ion-icon></a>
+            target="_blank">
+            <ion-icon name="logo-instagram" class="nav-icon"></ion-icon>
+          </a>
+        </li>
+        <li>
+          <a 
+            href="https://wa.me/5521964933158?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20informa%C3%A7%C3%B5es%20sobre%20aulas%20de%20capoeira." 
+            target="_blank">
+            <ion-icon name="logo-whatsapp" class="nav-icon"></ion-icon>
+          </a>
         </li>
       </ul>
     </nav>
   </div>
   </header>
 
+  <div class="contador-div" style="display: flex; align-items: center; justify-content: center;">
+    <h1>Contador:</h1>
+    <h1 class="contador">0</h1>
+  </div>
+
   <!-- CARROSSEL -->
   <section class="carrossel">
+    <button>
+      <ion-icon name="chevron-back-outline" class="left-arrow"></ion-icon>
+    </button>
     <img src="img/img-1.jpg" alt="">
+    <img src="img/img-2.jpg" alt="" class="hide">
+    <button>
+      <ion-icon name="chevron-forward-outline" class="right-arrow"></ion-icon>
+    </button>
   </section>
 
   <!-- Mestre Espiga -->
