--- a/index.html
+++ b/index.html
@@ -48,20 +48,18 @@
   </div>
   </header>
 
-  <div class="contador-div" style="display: flex; align-items: center; justify-content: center;">
-    <h1>Contador:</h1>
-    <h1 class="contador">0</h1>
-  </div>
-
   <!-- CARROSSEL -->
   <section class="carrossel">
     <button>
-      <ion-icon name="chevron-back-outline" class="left-arrow"></ion-icon>
+      <ion-icon name="chevron-back-outline" class="left-arrow arrow"></ion-icon>
     </button>
-    <img src="img/img-1.jpg" alt="">
-    <img src="img/img-2.jpg" alt="" class="hide">
+    <img src="img/img-1.jpg" alt="" class="img-0">
+    <img src="img/img-2.jpg" alt="" class="img-1 hide">
+    <img src="img/img-3.jpg" alt="" class="img-2 hide">
+    <img src="img/img-4.jpg" alt="" class="img-3 hide">
+    <img src="img/img-5.jpg" alt="" class="img-4 hide">
     <button>
-      <ion-icon name="chevron-forward-outline" class="right-arrow"></ion-icon>
+      <ion-icon name="chevron-forward-outline" class="right-arrow arrow"></ion-icon>
     </button>
   </section>
 
