--- a/index.html
+++ b/index.html
@@ -53,11 +53,13 @@
     <button>
       <ion-icon name="chevron-back-outline" class="left-arrow arrow"></ion-icon>
     </button>
-    <img src="img/img-1.jpg" alt="" class="img-0">
-    <img src="img/img-2.jpg" alt="" class="img-1 hide">
-    <img src="img/img-3.jpg" alt="" class="img-2 hide">
-    <img src="img/img-4.jpg" alt="" class="img-3 hide">
-    <img src="img/img-5.jpg" alt="" class="img-4 hide">
+    <div class="pictures">
+      <img src="img/img-1.jpg" alt="" class="img-0">
+      <img src="img/img-2.jpg" alt="" class="img-1 hide">
+      <img src="img/img-3.jpg" alt="" class="img-2 hide">
+      <img src="img/img-4.jpg" alt="" class="img-3 hide">
+      <img src="img/img-5.jpg" alt="" class="img-4 hide">
+    </div>
     <button>
       <ion-icon name="chevron-forward-outline" class="right-arrow arrow"></ion-icon>
     </button>
