--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
   <!-- Mestre Espiga -->
   <section class="mestre-espiga" id="mestre-espiga">
-    <div class="section-div grid grid--2-cols">
+    <div class="mestre-espiga-div section-div grid grid--2-cols">
       <img src="/img/mestre-espiga.jpg" alt="" class="mestre-pic">
       <article class="mestre-article">
         <h2 class="heading-secondary">Mestre Espiga</h2>
