--- a/index.html
+++ b/index.html
@@ -19,33 +19,44 @@
 </head>
 <body>
   <!-- Header/Nav -->
-  <header>
+  <header class="header">
     <div class="header-div section-div">
-    <img src="img/Logo-1.png" alt="" class="logo">
-    <nav>
-      <ul class="nav-list">
-        <li><a href="#mestre-espiga" class="nav-link">Mestre Espiga</a>
-        </li>
-        <li><a href="#turmas" class="nav-link">Turmas</a></li>
-        <li><a href="#local" class="nav-link">Localização</a></li>
-        <li><a href="#contato" class="nav-link">Contato</a></li>
-        <li>
-          <a
-            href="https://www.instagram.com/capoeiravemcamara/"
-            target="_blank">
-            <ion-icon name="logo-instagram" class="nav-icon"></ion-icon>
-          </a>
-        </li>
-        <li>
-          <a 
-            href="https://wa.me/5521964933158?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20informa%C3%A7%C3%B5es%20sobre%20aulas%20de%20capoeira." 
-            target="_blank">
-            <ion-icon name="logo-whatsapp" class="nav-icon"></ion-icon>
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </div>
+      <div class="logo-div">
+        <a href="#">
+          <img src="img/Logo-1.png" alt="" class="logo">
+        </a>
+      </div>
+
+      <nav class="nav">
+        <ul class="nav-list">
+          <li><a href="#mestre-espiga" class="nav-link">Mestre Espiga</a>
+          </li>
+          <li><a href="#turmas" class="nav-link">Turmas</a></li>
+          <li><a href="#local" class="nav-link">Localização</a></li>
+          <li><a href="#contato" class="nav-link">Contato</a></li>
+          <li>
+            <a
+              href="https://www.instagram.com/capoeiravemcamara/"
+              target="_blank">
+              <ion-icon name="logo-instagram" class="nav-icon"></ion-icon>
+            </a>
+          </li>
+          <li>
+            <a 
+              href="https://wa.me/5521964933158?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20informa%C3%A7%C3%B5es%20sobre%20aulas%20de%20capoeira." 
+              target="_blank">
+              <ion-icon name="logo-whatsapp" class="nav-icon"></ion-icon>
+            </a>
+          </li>
+        </ul>
+      </nav>
+      
+      <button class="btn-menu" >
+        <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+        <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+      </button>
+      
+    </div>
   </header>
 
   <!-- CARROSSEL -->
@@ -71,9 +82,19 @@
       <img src="/img/mestre-espiga.jpg" alt="" class="mestre-pic">
       <article class="mestre-article">
         <h2 class="heading-secondary">Mestre Espiga</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur accusantium deserunt eveniet a pariatur in minima et aliquam, sint harum modi beatae culpa voluptas dolorem placeat autem similique obcaecati nostrum?</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem deleniti maxime nam soluta quo, ratione et officia consectetur debitis unde provident quia? Dolore et dolor quaerat repellendus amet ea unde?</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem deleniti maxime nam soluta quo, ratione et officia consectetur debitis unde provident quia? Dolore et dolor quaerat repellendus amet ea unde?</p>
+        <p>
+        João Jardim, conhecido como Espiga, iniciou seu aprendizado na Capoeira em 1986, com o então contra mestre do Grupo Senzala Mestre Boneco, participando como aluno da fundação do Grupo Capoeira Brasil em 1989.
+        </p>
+        <p>
+        Há mais de 25 anos dissemina a cultura brasileira pelo mundo como professor de Capoeira e atualmente ministra aulas para crianças e adultos em seu espaço inteiramente dedicado a Capoeira, visando uma didática abrangente que transmita noções musicais, domínio corporal,
+        ensinamentos histórico-culturais brasileiros e afrodescendentes, além de importantes valores para a formação do ser, 
+        como a humildade, interação, respeito mútuo e disciplina.   
+        </p>
+        <p>
+        Espiga busca através da Capoeira, o desenvolvimento de seus 
+        alunos muito além do aspecto físico e é reconhecido pela sua forma de ensinar a Capoeira, participando de eventos em diversos países e transmitindo seus ensinamentos para capoeiristas 
+        de diferentes culturas.
+        </p>
       </article>
     </div>
   </section>
