--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <a 
           href="https://mail.google.com/mail/?view=cm&fs=1&to=espigarj@gmai.com" target="_blank">
           <ion-icon name="mail-outline"></ion-icon>
-          <p>espigarj@gmai.com</p>
+          <p>espigarj@gmail.com</p>
         </a>
       </div>
       <div class="social">
