--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <link rel="stylesheet" href="/styles/style.css">
   <link rel="stylesheet" href="/styles/query.css">
 
+  <link rel="icon" type="image/png" href="img/Logo-1.png"/>
+
   <title>Capoeira Vem Camará</title>
 </head>
 <body>
